--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ li:hover {
         width: 60%;
         margin: 20px;
         padding: 50px;
+        
+    background-color: #EAD196;
 
 
         >.skill-name {
